# 3DViewer

./: README.md
src/: CMakeLists.txt  Makefile  dvi.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ExtLibs/QtGifImage/src/gifimage/: CMakeLists.txt
src/ExtLibs/QtGifImage/src/gifimage/giflib/: CMakeLists.txt
src/controller/: afine_stategy.cc  afine_strategy.h  command.cc  command.h  mwcontroller.cc  mwcontroller.h
src/model/: afine_strategy.h  command.cc  command.h  model.cc  model.h
src/tests/: tests.cc
src/view/: settings_widget.h  vertex_shader.vsh  viewer.cc  viewer.cpp  viewer.h
